# soloQueue

./: .env.example  .gitignore  .prettierignore  AGENT.md  AGENTS.md  CLAUDE.md  CONFIRM_EVENT_BUBBLE_FIX_SUMMARY.md  CURRENT_SESSION_SUMMARY.md  DETAILED_FINDINGS.md  DOCKER_LIFECYCLE_QUICK_REF.md  EVENT_FLOW_DIAGRAM.txt  EXPLORATION_SUMMARY.txt  FINAL_REPORT.md  FINDINGS_HTTP_400_ROOT_CAUSE.txt  IMPLEMENTATION_VERIFICATION.md  LIFECYCLE_CHANGES.md  LOGGING_EVALUATION.md  LOGGING_EXECUTIVE_SUMMARY.md  LOGGING_MATRIX.md  MEMORY.md  Makefile  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  RESEARCH_SUMMARY.md  ROOT_CAUSE_ANALYSIS.md  TODO.md  cleanup_kanban.go  eslint.config.ts  go.mod  go.sum  main.py  package-lock.json  package.json  patch_desk_mask.py  patch_office.py  patch_simstore.py  playwright.config.js  pyproject.toml  task.md  (+3 more)
.claude/: settings.json
.soloqueue/: state.db  state.db-shm  state.db-wal
backend/: go.mod  go.sum
desktop/: DESIGN.md  electron-builder.json  main.js  package.json  pnpm-lock.yaml  preload.js  vite.config.ts
doc/: advanced_memory_design.md  architecture_v2_status.md  design.md  group_architecture.md  hybrid_architecture.md  memory_architecture.md  part1_infrastructure.md  part2_orchestration.md  part3_agents.md  roadmap.md  streaming_verification.md  web_ui_design.md
docs/: AGENT_SYSTEM_ARCHITECTURE.md  AGENT_SYSTEM_ARCHITECTURE_ZH.md  CONFIGURATION_SYSTEM_ARCHITECTURE.md  CONFIGURATION_SYSTEM_ARCHITECTURE_ZH.md  LLM_SYSTEM_ARCHITECTURE.md  LLM_SYSTEM_ARCHITECTURE_ZH.md  MODEL_CONFIGURATION_SYSTEM.md  MODEL_CONFIG_DIAGRAMS.md  (+34 more)
(+1122 files in other folders)
